; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/hash/extr_hashinsert.c__hash_pgaddmultitup.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/hash/extr_hashinsert.c__hash_pgaddmultitup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LH_BUCKET_PAGE = common dso_local global i32 0, align 4
@LH_OVERFLOW_PAGE = common dso_local global i32 0, align 4
@InvalidOffsetNumber = common dso_local global i64 0, align 8
@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"failed to add index item to \22%s\22\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_hash_pgaddmultitup(i32 %0, i32 %1, i64* %2, i32* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i64* %2, i64** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32 %4, i32* %10, align 4
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* @LH_BUCKET_PAGE, align 4
  %19 = load i32, i32* @LH_OVERFLOW_PAGE, align 4
  %20 = or i32 %18, %19
  %21 = call i32 @_hash_checkpage(i32 %16, i32 %17, i32 %20)
  %22 = load i32, i32* %7, align 4
  %23 = call i32 @BufferGetPage(i32 %22)
  store i32 %23, i32* %12, align 4
  store i32 0, i32* %14, align 4
  br label %24

24:                                               ; preds = %69, %5
  %25 = load i32, i32* %14, align 4
  %26 = load i32, i32* %10, align 4
  %27 = icmp slt i32 %25, %26
  br i1 %27, label %28, label %72

28:                                               ; preds = %24
  %29 = load i64*, i64** %8, align 8
  %30 = load i32, i32* %14, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds i64, i64* %29, i64 %31
  %33 = load i64, i64* %32, align 8
  %34 = call i32 @IndexTupleSize(i64 %33)
  store i32 %34, i32* %15, align 4
  %35 = load i32, i32* %15, align 4
  %36 = call i32 @MAXALIGN(i32 %35)
  store i32 %36, i32* %15, align 4
  %37 = load i64*, i64** %8, align 8
  %38 = load i32, i32* %14, align 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds i64, i64* %37, i64 %39
  %41 = load i64, i64* %40, align 8
  %42 = call i32 @_hash_get_indextuple_hashkey(i64 %41)
  store i32 %42, i32* %13, align 4
  %43 = load i32, i32* %12, align 4
  %44 = load i32, i32* %13, align 4
  %45 = call i32 @_hash_binsearch(i32 %43, i32 %44)
  store i32 %45, i32* %11, align 4
  %46 = load i32, i32* %11, align 4
  %47 = load i32*, i32** %9, align 8
  %48 = load i32, i32* %14, align 4
  %49 = sext i32 %48 to i64
  %50 = getelementptr inbounds i32, i32* %47, i64 %49
  store i32 %46, i32* %50, align 4
  %51 = load i32, i32* %12, align 4
  %52 = load i64*, i64** %8, align 8
  %53 = load i32, i32* %14, align 4
  %54 = sext i32 %53 to i64
  %55 = getelementptr inbounds i64, i64* %52, i64 %54
  %56 = load i64, i64* %55, align 8
  %57 = trunc i64 %56 to i32
  %58 = load i32, i32* %15, align 4
  %59 = load i32, i32* %11, align 4
  %60 = call i64 @PageAddItem(i32 %51, i32 %57, i32 %58, i32 %59, i32 0, i32 0)
  %61 = load i64, i64* @InvalidOffsetNumber, align 8
  %62 = icmp eq i64 %60, %61
  br i1 %62, label %63, label %68

63:                                               ; preds = %28
  %64 = load i32, i32* @ERROR, align 4
  %65 = load i32, i32* %6, align 4
  %66 = call i32 @RelationGetRelationName(i32 %65)
  %67 = call i32 @elog(i32 %64, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32 %66)
  br label %68

68:                                               ; preds = %63, %28
  br label %69

69:                                               ; preds = %68
  %70 = load i32, i32* %14, align 4
  %71 = add nsw i32 %70, 1
  store i32 %71, i32* %14, align 4
  br label %24

72:                                               ; preds = %24
  ret void
}

declare dso_local i32 @_hash_checkpage(i32, i32, i32) #1

declare dso_local i32 @BufferGetPage(i32) #1

declare dso_local i32 @IndexTupleSize(i64) #1

declare dso_local i32 @MAXALIGN(i32) #1

declare dso_local i32 @_hash_get_indextuple_hashkey(i64) #1

declare dso_local i32 @_hash_binsearch(i32, i32) #1

declare dso_local i64 @PageAddItem(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @elog(i32, i8*, i32) #1

declare dso_local i32 @RelationGetRelationName(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
